changed banner to larger size

--- a/adlerPlanetarium.html
+++ b/adlerPlanetarium.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <br>
-    <div id="banner">
-      <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
-    </div>
-    
+  <div id="banner">
+    <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+  </div>
+
     <br>
     <div class= "button-center">
         <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
