--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <br>
-    <div id="banner">
-      <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
-    </div>
+  <div id="banner">
+    <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
+  </div>
     
     <br>
     <div class= "button-center">
@@ -41,7 +40,7 @@
               <td>$19.95</td>
               <td>Free</td>
             </tr>
-            <tr>
+            <tr class = "spaceUnder">
               <td>Children(3-11)</td>
               <td>$29.95</td>
               <td>$14.95</td>
