--- a/lincolnParkZoo.html
+++ b/lincolnParkZoo.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <br>
     <div id="banner">
-      <img src="pictures/banner3.jpg" alt="mainpage banner" class = "center" title = "Chocolate Disco Chicago Tourism Homepage" onclick="location.href='homepage.html';">
+        <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
     </div>
 
     <br>
