changed font size and button colors

--- a/homepage.html
+++ b/homepage.html
@@ -84,11 +84,11 @@
    <!-- <br> -->
     <hr style="background-color:rgb(111, 148, 204); height: .5px">
 
-    <p style = "padding-left: 5px;"> Step 3: Driving? Learn about Parking </p>
+    <p style = "padding-left: 5px; font-size: 18px; color: black;"> Step 3: Driving? Learn about Parking </p>
     <div class= "viewMore">
-      <button type ="button" id="VMP" class="btn" onclick="location.href='parking.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background-color: rgb(34, 74, 133); color: white;"> View More </button>
+      <button type ="button" id="VMP" class="btn" onclick="location.href='parking.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> View More </button>
       <span style = "padding: 15px;">
-      <p> Driving to Chicago? Make sure you know about parking! </p>
+      <p style="font-size: 18px;  color: black;"> Driving to Chicago? Make sure you know about parking! </p>
       </span>
     </div>
 
