changed all button colors

--- a/homepage.html
+++ b/homepage.html
@@ -23,8 +23,8 @@
     
     <div class= "button-center">
       <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Attractions </button>
-      <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
-      <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
+      <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Transportation </button>
+      <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Parking </button>
     </div>
     <br>
     <img src="pictures/skyline.jpg" alt="mainpage skyline" class = "center">
@@ -64,7 +64,7 @@
 
     <p style = "padding-left: 5px;"> Step 1: Choose your Attractions </p>
     <div class= "viewMore">
-      <button type ="button" id="VMA" class="btn" onclick="location.href='attractions.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMA" class="btn" onclick="location.href='attractions.html';" style = "width: 120px; height:50px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> View More </button>
       <span style = "padding: 15px;">
         <p>Chicago is full of fun attractions, including Sears Towers, Sedd Aquarium, and more! </p>
       </span>
@@ -75,7 +75,7 @@
 
     <p style = "padding-left: 5px;"> Step 2: Figure out Transportation within the City </p>
     <div class= "viewMore">
-      <button type ="button" id="VMT" class="btn" onclick="location.href='transportation.html';" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal;"> View More </button>
+      <button type ="button" id="VMT" class="btn" onclick="location.href='transportation.html';" style = "width: 120px; height:50px; vertical-align: middle;  margin-left: 10px; margin-top: 5px; white-space: normal; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> View More </button>
       <span style = "padding: 15px;">
         <p> Chicago has several forms of inner city travel! </p>
       </span>
