--- a/spotHero.html
+++ b/spotHero.html
@@ -13,12 +13,21 @@
             <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
         </div>
 
-         <br>
+        <br>
         <div class= "button-center">
-            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
-            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
-            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
+            <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Attractions </button>
+            <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Transportation </button>
+            <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Parking </button>
         </div>
+        <br>
+
+        <div class= "button-center">
+            <button type ="button" id="generalRules " class="btn" onclick="location.href='parking.html';" style="width: 130px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> General Rules </button>
+            <button type ="button" id="typesOfParking" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> Types of Parking </button>
+            <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> SpotHero App </button>
+        </div>
+
+
         <br>
         <h2 style="text-align: center;"> SpotHero </h2>
 
