--- a/uberLyft.html
+++ b/uberLyft.html
@@ -13,9 +13,9 @@
     
     <br>
     <div class= "button-center">
-        <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px;"> Attractions </button>
-        <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px"> Transportation </button>
-        <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px;"> Parking </button>
+        <button type ="button" id="Attractions" class="btn" onclick="location.href='attractions.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Attractions </button>
+        <button type ="button" id="Transportation" class="btn" onclick="location.href='transportation.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Transportation </button>
+        <button type ="button" id="Parking" class="btn" onclick="location.href='parking.html';" style="width: 160px; height: 60px; font-size: 20px; background-color: rgb(34, 74, 133); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(111, 148, 204)'" onmouseleave="style.backgroundColor = 'rgb(34, 74, 133)'"> Parking </button>
     </div>
     <br>
     <h2 style="text-align: center;"> Uber and Lyft </h2>   
