--- a/parking.html
+++ b/parking.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="homepage.css">
 
     </head>
-    <body>
+    <body style="background-image:url('pictures/background5.jpg');background-position: 0px 0px; background-repeat: no-repeat;background-size: 100% 100%;"> 
+
         
         <div id="banner">
             <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
