--- a/transportation.html
+++ b/transportation.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="homepage.css">
 
     </head>
-    <body style="background-image:url('pictures/background5.jpg');background-position: 0px 0px; background-repeat: no-repeat;background-size: 100% 100%;"> 
+    <body style="background-image:url('pictures/background5.jpg');background-position: center; background-repeat: no-repeat; background-size: 100%; height: 100%;"> 
         
         <div id="banner">
             <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
@@ -38,11 +38,10 @@
 
         <br>
 
-        <div class = "viewMore" style = "padding-left: 200px;">
+        <div  style = "padding-left: 200px;  display: inline;">
             <button type = "button" id = "Divvy" class="btn" onclick="location.href='divvy.html';"  style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
-            <span style = "padding: 40px;">
-                <p style = "font-size: 30px;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
-            </span>
+                <p style = "font-size: 30px; display: inline;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
+            
         </div>
     </body>
 </html>
