--- a/attractions.html
+++ b/attractions.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="homepage.css">
 
     </head>
-    <body style="background-image:url('pictures/background5.jpg');background-position: center; background-repeat: no-repeat; background-size: 100%; height: 100%;"> 
+    <body style="background-image:url('pictures/background5.jpg');background-position: center; background-repeat: no-repeat; background-size: 100% 100%;"> 
 
         <div id="banner">
             <img src="pictures/bannerCopy2.jpg" alt="mainpage banner" style = "width: 100%;" title = "Chocolate Disco Chicago Tourism Homepage" class = "center" onclick="location.href='homepage.html';">
