--- a/homepage.html
+++ b/homepage.html
@@ -2,6 +2,8 @@
 <html>
   <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
   <title>Chocolate Disco Chicago Tourism</title>
   <link rel="stylesheet" href=
