--- a/transportation.html
+++ b/transportation.html
@@ -23,7 +23,7 @@
         <h2 style="text-align: center;"> Transportation </h2>
         <br>
         <div class= "viewMore" style = "padding-left: 200px;">
-            <button type ="button" id="CTA" class="btn" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type ="button" id="CTA" class="btn" onclick="location.href='cta.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px; vertical-align: 50%;">CTA: Mass Public Transit within the City of Chicago </p>
             </span>
