added button borders

--- a/transportation.html
+++ b/transportation.html
@@ -23,14 +23,14 @@
         <h2 style="text-align: center;"> Transportation </h2>
         <br>
         <div class= "viewMore" style = "padding-left: 200px;">
-            <button type ="button" id="CTA" class="btn" onclick="location.href='cta.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type ="button" id="CTA" class="btn" onclick="location.href='cta.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/CTA.jpg'); background-size: 110px 110px; border: 5px solid rgb(111, 148, 204);  background-repeat: no-repeat; background-position: center;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px; vertical-align: 50%;">CTA: Mass Public Transit within the City of Chicago </p>
             </span>
         </div>
         <br>
         <div class= "viewMore" style = "padding-left: 200px;">
-            <button type ="button" id="UL" class="btn" onclick="location.href='uberLyft.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type ="button" id="UL" class="btn" onclick="location.href='uberLyft.html';" style = "width: 120px; height:120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; white-space: normal; background:url('pictures/uberLyft.jpg'); background-size: 120px 120px; border: 5px solid rgb(111, 148, 204);  background-position: center; background-repeat: no-repeat;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px">Uber/Lyft: Ride Hailing and Sharing throughout Chicago </p>
             </span>
@@ -39,7 +39,7 @@
         <br>
 
         <div class = "viewMore" style = "padding-left: 200px;">
-            <button type = "button" id = "Divvy" class="btn" onclick="location.href='divvy.html';"  style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+            <button type = "button" id = "Divvy" class="btn" onclick="location.href='divvy.html';"  style="width: 120px; height: 120px; vertical-align: middle; margin-left: 10px; margin-top: 5px; background:url('pictures/divvy.jpg'); background-size: 120px 120px; border: 5px solid rgb(111, 148, 204);  background-position: center; background-repeat: no-repeat;"></button>
             <span style = "padding: 40px;">
                 <p style = "font-size: 30px;">Divvy: Bicycle sharing system found in the metropolitan area of Chicago</p>
                 </span>
