--- a/homepage.html
+++ b/homepage.html
@@ -30,7 +30,7 @@
     </div>
     <br>
     <img src="pictures/skyline.jpg" alt="mainpage skyline" class = "center">
-    <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Click Above to Learn More!</p>
+    <p style="text-align: center;"> First time to Chicago? Let us help ease your experience! <br> Scroll Down to Learn More!</p>
     <br>
     <h5 style = "text-align: center;">Covid Guidelines for Chicago? MAYBE REMOVE?</h5>
     <br>
@@ -38,22 +38,22 @@
 
     <div class= "button-center">
       <div class = "fm" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
-        <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 100%; background-repeat: no-repeat;"></button>
+        <button type = "button" id = "FM" class="btn" onclick="location.href='fieldMuseum.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Field\ Museum.jpg'); background-size: 110px 110px; border: 5px solid rgb(111, 148, 204);  background-repeat: no-repeat; background-position: center;"></button>
         <br>
         <label>Field Museum</label>
     </div>
     <div class = "shedd" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
-      <button type = "button" id = "Shedd" class="btn" onclick="location.href='sheddAquarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+      <button type = "button" id = "Shedd" class="btn" onclick="location.href='sheddAquarium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/Shedd-Aquarium-scaled.jpg'); background-size: 110px 110px; border: 5px solid rgb(111, 148, 204);  background-repeat: no-repeat; background-position: center;"> </button>
       <br>
       <label>Shedd Aquarium</label>
     </div>
     <div class = "mp" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;"> 
-      <button type = "button" id = "MP" class="btn" onclick="location.href='millenium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 100%; background-repeat: no-repeat;"> </button>
+      <button type = "button" id = "MP" class="btn" onclick="location.href='millenium.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/chicago-millenium-park-sculpture.jpg'); background-size: 110px 110px; border: 5px solid rgb(111, 148, 204);  background-repeat: no-repeat; background-position: center;"> </button>
       <br>
       <label>Millenium Park</label>
     </div>
     <div class = "lpz" style = "display: inline-block;  text-align: center; padding-left: 10px; padding-right: 10px;">
-      <button type = "button" id = "LPZ" class="btn" onclick="location.href='lincolnParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 100%; background-repeat: no-repeat;"></button>
+      <button type = "button" id = "LPZ" class="btn" onclick="location.href='lincolnParkZoo.html';" style = "width: 110px; height: 110px; vertical-align: middle; white-space: normal; background:url('pictures/download.jfif'); background-size: 110px 110px; border: 5px solid rgb(111, 148, 204);  background-repeat: no-repeat; background-position: center;"></button>
       <br>
       <label>Lincoln Park Zoo</label>
     </div>
