Parkings and Navy Pier

--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -56,8 +56,8 @@
           </table>
           <br>
           
-          <p>Members and Children under 3 are free!
-        </p><br>
+          <p>Members and Children under 3 are free!</p>
+          <br>
 
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here are some of the benefits: </p>
