--- a/spotHero.html
+++ b/spotHero.html
@@ -23,7 +23,7 @@
 
         <div class= "button-center">
             <button type ="button" id="generalRules " class="btn" onclick="location.href='parking.html';" style="width: 130px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> General Rules </button>
-            <button type ="button" id="typesOfParking" class="btn" onclick="location.href='#';" style="width: 140px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> Types of Parking </button>
+            <button type ="button" id="typesOfParking" class="btn" onclick="location.href='parkingTypes.html';" style="width: 140px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> Types of Parking </button>
             <button type ="button" id="spotHero" class="btn" onclick="location.href='spotHero.html';" style="width: 130px; height: 50px; font-size: 15px; background-color: rgb(111, 148, 204); color: white;" onmouseenter = "this.style.backgroundColor = 'rgb(34, 74, 133)'" onmouseleave="style.backgroundColor = 'rgb(111, 148, 204)'"> SpotHero App </button>
         </div>
 
