--- a/childrensMuseum.html
+++ b/childrensMuseum.html
@@ -36,8 +36,16 @@
         
         <h4>Memberships:</h5>
         <p>Thinking about becoming a member? Here is more information:</p>
-        <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank">link</a>
-
+        <ul>
+            <li>Free daily admission</li>
+            <li>2 authorized users per membership with the option to add an additional authorized user to the membership</li>
+            <li>10% discount at the Museum Gift Shop</li>
+            <li>Exclusive members-only events, offers, and activities</li>
+            <li>50% off general admission at more than 300 children’s museums worldwide</li>
+            <li>And More!</li>
+        </ul>
+        <a href = "https://www.chicagochildrensmuseum.org/become-a-member" target="_blank">For more information about Memberships, click here!</a>
+        <br>
         <br>
         <h4>Covid Guidelines:</h4>
         <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status.</p>
