--- a/lincolnParkZoo.html
+++ b/lincolnParkZoo.html
@@ -22,15 +22,15 @@
     <h2 style="text-align: center;"> Lincoln Park Zoo </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;"></p?>
-
+        <p style="padding-bottom: 5px;">Lincoln Park Zoo is a 35-acre zoo in Lincoln Park. The zoo was founded in 1868, making it the fourth oldest zoo in North America. It is also one of a few free admission zoos in the United States. The zoo is an accredited member of the Association of Zoos and Aquariums.</p?>
+        
         <h4>Costs: </h4>
-        <p></p>
+        <p> FREE! </p>
 
         <br>
 
         <h4>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;"></p>
+        <p style="padding-bottom: 5px;">Reservations are no longer required to visit the zoo. However, the zoo respectfully recommend—for the safety of the animals in their care—that all guests continue to wear face coverings at all times in animal buildings.</p>
 
 
         <h4>Location:</h4>
